# anomaly_detection

./: README.md  pyproject.toml
anomaly_detection/: paths.py
notebooks/: nyc_taxi.ipynb
